fix: adjust user info alignment in print styles

--- a/src/assets/print.scss
+++ b/src/assets/print.scss
@@ -49,8 +49,6 @@
       }
     }
     .user-info {
-      text-align: right;
-      // align-self: flex-end;
       font-weight: 500;
       margin-top: 20px;
     }
